--- a/lectures/conformal_ds/conformal_ds.tex
+++ b/lectures/conformal_ds/conformal_ds.tex
@@ -865,7 +865,7 @@ intervals.
 
 \section{Adaptive conformal inference}
 
-\def\err{\text{err}}
+\def\err{\mathrm{err}}
 
 Lastly we cover a conformal-like method, for sequential prediction problems, due 
 to \citet{gibbs2021adaptive}. In a way, this is a signifcant departure from the
