--- a/lectures/calibration/calibration.tex
+++ b/lectures/calibration/calibration.tex
@@ -5,7 +5,7 @@
 \usepackage[normalem]{ulem}
 \usepackage{animate}
 
-\title{Calibration and Forecast Scoring \\ \smallskip
+\title{Forecast Scoring and Calibration \\ \smallskip
 \large Advanced Topics in Statistical Learning, Spring 2023 \\ \smallskip
 Ryan Tibshirani }
 \date{}
